# Raytracing

./: .gitignore  CMakeLists.txt  Halton.hpp  ONB.h  ONB.hpp  README.md  aabb.h  aabb.hpp  aarect.h  aarect.hpp  box.h  box.hpp  bvh.h  bvh.hpp  bvh_node.hpp  camera.h  camera.hpp  color.h  color.hpp  common.h  common.hpp  constant_medium.h  constant_medium.hpp  fog.h  fog.hpp  helpful.hpp  hittable.h  hittable.hpp  hittable_list.h  hittable_list.hpp  main.cpp  material.h  material.hpp  moving_sphere.h  moving_sphere.hpp  pdf.h  pdf.hpp  perlin.h  perlin.hpp  probability.h  (+24 more)
Explainations/raw/: participating_medium_non_const_density.aux  participating_medium_non_const_density.tex  vect10.600pk  vect6.600pk  vect7.600pk  vect8.600pk
images/: image1.ppm  image10.ppm  image11.ppm  image12.ppm  image13.ppm  image14.ppm  image15.ppm  image16.ppm  image17.ppm  image18.ppm  image2.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  image8.ppm  image9.ppm
images/Proof_of_concept/: perlin_noise_textures.ppm
scenes/: all_scenes.hpp  cornell_box.hpp  cornell_box_fog.hpp  cornell_box_gas_boxes.hpp  cornell_box_smoke.hpp  cornell_box_sphere.hpp  earth.hpp  earth_atm.hpp  first_scene.hpp  foggy_balls.hpp  mesh_scenes.hpp  rt_week.hpp  rt_weekend.hpp  triangle.hpp  two_perlin_spheres.hpp  two_spheres.hpp
